--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,13 +1,31 @@
-<%- include('../partials/header.ejs') %>
+<!DOCTYPE html>
+<html lang="en">
 
-<form action="/auth/sign-up" method="POST">
-  <label for="username">Username:</label>
-  <input type="text" name="username" id="username" />
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" />
-  <label for="confirmPassword">Confirm Password:</label>
-  <input type="password" name="confirmPassword" id="confirmPassword" />
-  <button type="submit">SIGN UP</button>
-</form>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Encounterly - Sign up for free!</title>
+  <link rel="stylesheet" href="/css/main.css" />
+</head>
 
-<%- include('../partials/footer.ejs')%>
+<body>
+  <%- include('../partials/header.ejs') %>
+
+    <!-- Sign up page content-->
+    <div class="wrapper">
+      <h1>Sign up for a free account!</h1>
+      <form action="/auth/sign-up" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username" />
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" />
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" name="confirmPassword" id="confirmPassword" />
+        <button type="submit">SIGN UP</button>
+      </form>
+    </div>
+
+    <%- include('../partials/footer.ejs')%>
+</body>
+
+</html>
