--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -14,8 +14,12 @@
         <div class="wrapper">
             <h1>Builder page</h1>
             <div class="builder-wrapper">
-                <%- include('../partials/monsters.ejs') %>
-                <%- include('../partials/encounter.ejs') %>
+                <div id="monsters">
+                    List of monsters
+                </div>
+                <div id="encounter">
+                    Encounter Builder
+                </div>
             </div>
         </div>
         <%- include('../partials/footer.ejs') %>
