--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
   <div>
     <!-- Above renders whether signed in or not -->
     <% if (user) { %>
+      <a href="/players">Players</a>
       <a href="/auth/sign-out">SIGN OUT</a>
       <span>
         <%= user.username %>
