Add player view edit and update functionality

--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -11,7 +11,7 @@
 <body>
     <!-- Home Page's Content -->
     <%- include('../partials/header.ejs') %>
-        <div class="wrapper">
+        <div class="wrapper center">
             <a href="/players/new">Add a New Player</a>
             <% if (players.length) { %>
                 <ul>
