--- a/views/players/show.ejs
+++ b/views/players/show.ejs
@@ -11,7 +11,7 @@
 <body>
     <!-- Home Page's Content -->
     <%- include('../partials/header.ejs') %>
-        <div class="wrapper">
+        <div class="wrapper center">
             <h1><%= player.charName %></h1>
             <img src="<%= player.charImg %>" style="max-width: 400px;">
             <ul>
