Add monsterSchema to models

--- a/views/players/edit.ejs
+++ b/views/players/edit.ejs
@@ -39,7 +39,7 @@
                 <label for="character-party">Party Name:</label>
                 <input type="string" name="partyName" id="partyName" value="<%= player.partyName %>" autocomplete="on"/>
         
-                <button type="submit">Edit Character</button>
+                <button type="submit">Submit Changes</button>
               </form>
         </div>
         <%- include('../partials/footer.ejs') %>
