--- a/views/players/show.ejs
+++ b/views/players/show.ejs
@@ -13,7 +13,7 @@
     <%- include('../partials/header.ejs') %>
         <div class="wrapper center">
             <h1><%= player.charName %></h1>
-            <img src="<%= player.charImg %>" style="max-width: 400px;">
+            <img src="<%= player.charImg %>" style="max-width: 400px; max-height: 300px;">
             <ul>
                 <li>Party Member of: <%= player.partyName %></li>
                 <li>Class: <%= player.charClass %></li>
