Add monster page index and new functionality

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <!-- Above renders whether signed in or not -->
     <% if (user) { %>
       <a href="/players">Players</a>
+      <a href="/monsters">Monsters</a>
       <a href="/auth/sign-out">SIGN OUT</a>
       <span>
         <%= user.username %>
