--- a/views/monsters/new.ejs
+++ b/views/monsters/new.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encounterly - Add a Monster</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <script src="/js/form-handler.js"></script>
 </head>
 
 <body>
@@ -22,6 +23,9 @@
               
                 <label for="monster-type">Type:</label>
                 <input type="text" name="type" id="monster-type" required/>
+
+                <label for="monster-size">Size:</label>
+                <input type="text" name="size" id="monster-size" required/>
               
                 <label for="xp">XP:</label>
                 <input type="number" name="xp" id="xp" required/>
@@ -60,27 +64,31 @@
 
                 <label for="Speed">Speed:</label>
                 <input type="number" name="stats.speed" id="speed" required/>
+            
 
                 <!-- detailSchema -->
+                    <label for="Senses">Senses:</label>
+                    <input type="text" name="details.senses" id="senses" />
+    
+                    <label for="Languages">Languages:</label>
+                    <input type="text" name="details.languages" id="languages" />
+    
+                    <label for="Description">Description:</label>
+                    <input type="text" name="details.description" id="description" />
 
-                <label for="Abilities">Abilities:</label>
-                <input type="text" name="details.abilities" id="abilities" />
-
-                <label for="Senses">Senses:</label>
-                <input type="text" name="details.senses" id="senses" />
-
-                <label for="Languages">Languages:</label>
-                <input type="text" name="details.languages" id="languages" />
-
-                <label for="Description">Description:</label>
-                <input type="text" name="details.description" id="description" />
-
-
-                <button type="submit">Add Monster to List</button>
+                    <h3>Abilities</h3>
+                    <div id="abilities-container" class="wrapper"> 
+                    <label for="abilities-name"> Name:</label> 
+                    <input type="text" name="details.abilities[0].name" id="abilities-name" /> 
+                    <label for="abilities-description">Description:</label> 
+                    <input type="text" name="details.abilities[0].description" id="abilities-description" /> 
+                    </div> 
+                    <button type="button" onclick="addAbility()">Add Another Ability</button>
+                    <button type="submit">Add Monster to List</button>
+                </div>
               </form>
-        </div>
+        
         <%- include('../partials/footer.ejs') %>
-
 </body>
 
 </html>
