Refactored update functionality, edit form and form handler

--- a/views/monsters/new.ejs
+++ b/views/monsters/new.ejs
@@ -51,9 +51,9 @@
                 <h3>Abilities</h3> 
                 <div id="abilities-container" class="wrapper">
                     <label for="abilities-name-0">Name:</label>
-                    <input type="text" name="details[abilities][0].name" id="abilities-name-0" />
+                    <input type="text" name="details[abilities][0][name]" id="abilities-name-0" />
                     <label for="abilities-description-0">Description:</label>
-                    <input type="text" name="details[abilities][0]description" id="abilities-description-0" />
+                    <input type="text" name="details[abilities][0][description]" id="abilities-description-0" />
                 </div>
                 <button type="button" onclick="addAbility()">Add Another Ability</button> 
                 <button type="submit">Add Monster to List</button> 
