--- a/views/monsters/edit.ejs
+++ b/views/monsters/edit.ejs
@@ -47,54 +47,54 @@
                 <!--statSchema-->
 
                 <label for="Strength">Strength:</label>
-                <input type="number" name="stats.str" id="str" value="<%= monster.stats.str %>" required/>
+                <input type="number" name="stats[str]" id="str" value="<%= monster.stats.str %>" required/>
 
                 <label for="Dexterity">Dexterity:</label>
-                <input type="number" name="stats.dex" id="dex" value="<%= monster.stats.dex %>" required/>
+                <input type="number" name="stats[dex]" id="dex" value="<%= monster.stats.dex %>" required/>
 
                 <label for="Constitution">Constitution:</label>
-                <input type="number" name="stats.con" id="con" value="<%= monster.stats.con %>" required/>
+                <input type="number" name="stats[con]" id="con" value="<%= monster.stats.con %>" required/>
 
                 <label for="Intelligence">Intelligence:</label>
-                <input type="number" name="stats.int" id="int" value="<%= monster.stats.int %>" required/>
+                <input type="number" name="stats[int]" id="int" value="<%= monster.stats.int %>" required/>
 
                 <label for="Wisdom">Wisdom:</label>
-                <input type="number" name="stats.wis" id="wis" value="<%= monster.stats.wis %>" required/>
+                <input type="number" name="stats[wis]" id="wis" value="<%= monster.stats.wis %>" required/>
 
                 <label for="Charisma">Charisma:</label>
-                <input type="number" name="stats.cha" id="cha" value="<%= monster.stats.cha %>" required/>
+                <input type="number" name="stats[cha]" id="cha" value="<%= monster.stats.cha %>" required/>
 
                 <label for="Speed">Speed:</label>
-                <input type="number" name="stats.speed" id="speed" value="<%= monster.stats.speed %>" required/>
+                <input type="number" name="stats[speed]" id="speed" value="<%= monster.stats.speed %>" required/>
             
 
                 <!-- detailSchema -->
                     <label for="Senses">Senses:</label>
-                    <input type="text" name="details.senses" id="senses" value="<%= monster.details.senses %>" />
+                    <input type="text" name="details[senses]" id="senses" value="<%= monster.details.senses %>" />
                     
                     <label for="Skills">Skills:</label>
-                    <input type="text" name="details.skills" id="skills" value="<%= monster.details.skills %>" />
+                    <input type="text" name="details[skills]" id="skills" value="<%= monster.details.skills %>" />
     
                     <label for="Languages">Languages:</label>
-                    <input type="text" name="details.languages" id="languages" value="<%= monster.details.languages %>" />
+                    <input type="text" name="details[languages]" id="languages" value="<%= monster.details.languages %>" />
     
                     <label for="Description">Description:</label>
-                    <input type="text" name="details.description" id="description" value="<%= monster.details.description %>" />
+                    <input type="text" name="details[description]" id="description" value="<%= monster.details.description %>" />
 
                     <h3>Abilities</h3>
                     <div id="abilities-container" class="wrapper"> 
                         <% if (monster.details.abilities.length) { %>
                             <% monster.details.abilities.forEach((ability, idx) => { %> 
                                 <label for="abilities-name-<%= idx %>">Name:</label> 
-                                <input type="text" name="details.abilities.<%= idx %>.name" id="abilities-name-<%= idx %>" value="<%= ability.name %>" /> 
+                                <input type="text" name="details[abilities][<%= idx %>][name]" id="abilities-name-<%= idx %>" value="<%= ability.name %>" /> 
                                 <label for="abilities-description-<%= idx %>">Description:</label> 
-                                <input type="text" name="details.abilities.<%= idx %>.description" id="abilities-description-<%= idx %>" value="<%= ability.description %>"/> 
+                                <input type="text" name="details[abilities][<%= idx %>][description]" id="abilities-description-<%= idx %>" value="<%= ability.description %>"/> 
                             <% }) %>
                         <% } else { %>
                             <label for="abilities-name-0">Name:</label> 
-                            <input type="text" name="details.abilities.0.name" id="abilities-name-0" /> 
+                            <input type="text" name="details[abilities][0][name]" id="abilities-name-0" /> 
                             <label for="abilities-description-0">Description:</label> 
-                            <input type="text" name="details.abilities.0.description" id="abilities-description-0" />
+                            <input type="text" name="details[abilities][0][description]" id="abilities-description-0" />
                         <% } %>
                     </div> 
                     <button type="button" onclick="addAbility()">Add Another Ability</button>
