Add encounter model

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <% if (user) { %>
       <a href="/players">Players</a>
       <a href="/monsters">Monsters</a>
+      <a href="/encounters">Encounters</a>
       <a href="/auth/sign-out">SIGN OUT</a>
       <span>
         <%= user.username %>
