--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -12,6 +12,7 @@
     <!-- Home Page's Content -->
     <%- include('../partials/header.ejs') %>
         <div class="wrapper center">
+            <h1>Players</h1>
             <a href="/players/new">Add a New Player</a>
             <% if (players.length) { %>
                 <ul>
