--- a/views/encounters/edit.ejs
+++ b/views/encounters/edit.ejs
@@ -14,36 +14,36 @@
         <div class="wrapper">
             <h1>Edit Your Encounter!</h1>
             <div class="wrapper">
-                <form action="/encounters" method="POST">
+                <form action="/encounters/<%= encounter._id %>?_method=PUT" method="POST">
                     <label for="encounter-name">Encounter Name:</label>
-                    <input type="text" name="name" id="name" required />
+                    <input type="text" name="name" id="name" value="<%= encounter.name %>" required />
 
                     <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
 
                     <div class="wrapper center">
-                    <label for="players">Players:</label>
-                    <!--Iterate through player options, when click, select them-->
-                    <select name="players[]" id="players" multiple>
-                        <% players.forEach(player=> { %>
-                            <option value="<%- player._id %>">
-                                <%= player.charName %>
-                            </option>
+                        <label for="players">Players:</label>
+                        <select name="players[]" id="players" multiple>
+                            <% players.forEach(player => { %>
+                                <option value="<%- player._id %>" 
+                                    <%= selectedPlayers.includes(player._id.toString()) ? 'selected' : '' %>>
+                                    <%= player.charName %>
+                                </option>
                             <% }) %>
-                    </select>
+                        </select>
                     </div>
 
-            <div class="wrapper center">
-                <label for="Enemies">Monsters:</label>
-                <!--Iterate through player options, when click, select them-->
-                <select name="enemies[]" id="enemies" multiple>
-                    <% monsters.forEach(monster=> { %>
-                        <option value="<%= monster._id %>">
-                            <%= monster.name %>
-                        </option>
-                        <% }) %>
-                </select>
-            </div>
-            <button type="submit">Save Encounter</button>
+                    <div class="wrapper center">
+                        <label for="Enemies">Monsters:</label>
+                        <select name="enemies[]" id="enemies" multiple>
+                            <% monsters.forEach(monster => { %>
+                                <option value="<%- monster._id %>" 
+                                    <%= selectedEnemies.includes(monster._id.toString()) ? 'selected' : '' %>>
+                                    <%= monster.name %>
+                                </option>
+                            <% }) %>
+                        </select>
+                    </div>
+            <button type="submit">Update Encounter</button>
             </form>
         </div>
         <%- include('../partials/footer.ejs') %>
