--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   height: 100vh;
   font-size: 1.95vmin;
+  overflow-x: hidden;
 }
 
 .background-img {
@@ -21,9 +22,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
-  margin-top: 2vmin;
-  width: 100%;
+  height: 100%;
 }
 
 .wrapper p,
@@ -49,6 +48,7 @@ footer {
   padding: 2vmin;
   font-size: 2vh;
   color: lightslategray;
+  width: 100%;
 }
 
 nav a {
@@ -75,6 +75,8 @@ main {
   flex-direction: column;
   align-items: center;
   margin-top: 5vmin;
+  max-width: 100%;
+  flex-grow: 1;
 }
 
 form {
@@ -137,7 +139,7 @@ button:hover {
   background-color: #48788bb9;
   border-radius: 10vmin;
   padding-bottom: 5vmin;
-  width: 90%;
+  width: 95%;
   margin-bottom: 10vmin;
  }
 
@@ -228,7 +230,6 @@ button:hover {
   color: white;
   border-radius: 4vmin;
 }
-
 
 @media only screen and (max-width: 1024px) {
   #monsters {
