--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body>
+<body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
   <%- include('../partials/header.ejs') %>
 
     <!-- Sign up page content-->
     <div class="wrapper">
+      <div class="sign-in-up">
       <h1> Sign in to your account</h1>
       <form action="/auth/sign-in" method="POST">
         <label for="username">Username:</label>
@@ -21,6 +22,7 @@
         <input type="password" name="password" id="password" />
         <button type="submit">SIGN IN</button>
       </form>
+      </div>
     </div>
 
     <%- include('../partials/footer.ejs')%>
