--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body>
+<body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
   <%- include('../partials/header.ejs') %>
 
     <!-- Sign up page content-->
     <div class="wrapper">
+    <div class="sign-in-up">
       <h1>Sign up for a free account!</h1>
       <form action="/auth/sign-up" method="POST">
         <label for="username">Username:</label>
@@ -23,6 +24,7 @@
         <input type="password" name="confirmPassword" id="confirmPassword" />
         <button type="submit">SIGN UP</button>
       </form>
+    </div>
     </div>
 
     <%- include('../partials/footer.ejs')%>
