--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,8 @@
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
   <!-- Home Page's Content -->
   <div class="wrapper">
-  <%- include('./partials/header.ejs') %>
-    <main>
+    <%- include('./partials/header.ejs') %>
+      <main>
         <div class="overlay-div">
           <div class="side">
             <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300">
@@ -32,15 +32,25 @@
             <h1>Ready for effortless encounters?</h1>
             <a href="/auth/sign-up">Try it for free!</a>
           </div>
-          <div class="testimonial-container">
+          <div class="nested-container">
             <h1>Testimonials</h1>
-            <div class="testimonials">
-              <div class="testimonial">1</div>
-              <div class="testimonial">2</div>
-              <div class="testimonial">3</div>
+            <div class="inner-container">
+              <div class="row-item">1</div>
+              <div class="row-item">2</div>
+              <div class="row-item">3</div>
             </div>
           </div>
-          <div class="lightbox">
+          <div class="nested-container">
+            <h1>Upcoming Features</h1>
+            <ul>
+              <div class="inner-container">
+                <li class="row-item-nobg">Feature 1</li>
+                <li class="row-item-nobg">Feature 2</li>
+                <li class="row-item-nobg">Feature 3</li>
+              </div>
+            </ul>
+          </div>
+          <div class="nested-container">
             <h1>Hey visitor!</h1>
             <p>Here's some cool info about this app</p>
             <a href="/auth/sign-up">And here's a link that'll take you to a sign-up page!</a>
@@ -58,7 +68,7 @@
         </div>
       </main>
       <%- include('./partials/footer.ejs') %>
-    </div>
+  </div>
 
 </body>
 
