--- a/views/partials/encounter.ejs
+++ b/views/partials/encounter.ejs
@@ -1,3 +1,4 @@
 <div id="encounter">
-    Encounter Builder
+    <h1>Build an Encounter</h1>
+    <a href="/encounters"><img src="https://i.imgur.com/7RoB4Dn.png" width="150" height="150"></a>
 </div>
